Got framework, and added images and whatnot

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <h1 class='hello-world'>Hello, World!</h1>
+    <!-- TITLE HEADER THING -->
+    <div>
+      <!-- FACE -->
+      <div>
+        <img>
+      </div>
+
+      <!-- TEXT BOX -->
+      <div>
+        
+      </div>
+    </div>
+
+    <!-- CARDS -->
+    <div>
+
+    </div>
+
+    <!-- CONTENT -->
+    <div>
+
+    </div>
+
+    <!-- FOOTER -->
+    <div>
+
+    </div>
   </body>
 </html>
