Got top part kind of working

--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,20 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" href="/screen.css">
   </head>
-  <body>
+  <body> 
     <!-- TITLE HEADER THING -->
     <div>
-      <!-- FACE -->
-      <div>
-        <img>
-      </div>
-
-      <!-- TEXT BOX -->
-      <div>
-        
-      </div>
+      <!-- FACE --> 
+      <div class="img-container">
+        <img class="img" src="./images/moby300x300.png" />
+      </div>     
     </div>
+
+    <!-- TEXT BOX -->
+    <blockquote class="text-box-bg textbox">
+      <h2>Hi, I'm Nicholas S Vilela!</h2>
+      <p>Dummy text just to fill some space</p>
+    </blockquote>
 
     <!-- CARDS -->
     <div>
