got some stuff working i think

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,13 @@
     <!-- START CONTENT -->
       <div class="content-container">
         <article>
-          
+          <div class="">
+              <h2 class="article-header">Hello, React.</h2>
+              <p class="article-header">August 1st, 2019</p>
+          </div>
+          Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+          Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+          Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
         </article>
 
         <article>
