Got most of it working as intended, have to add padding to text-box

--- a/public/index.html
+++ b/public/index.html
@@ -46,25 +46,61 @@
 
     <!-- START CONTENT -->
       <div class="content-container">
-        <article>
-          <div class="">
-              <h2 class="article-header">Hello, React.</h2>
-              <p class="article-header">August 1st, 2019</p>
-          </div>
-          Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
-          Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
-          Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+        <article class="article">
+          <img class="article-img" src="images/react.png" />
+
+          <!-- HEADER -->
+            <h2 class="article-header">Hello, React.</h2>
+            <p class="article-date">August 1st, 2019</p>
+
+          <!-- TEXT -->
+            <p class="article-text">
+              Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+              Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+              Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+              Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+              Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+              Anim reprehenderit culpa reprehenderit consectetur ullamco aliqua do eiusmod velit laboris dolor laboris ut anim.
+            </p>
+            <button class="keep-reading-button">KEEP READING</button>   
         </article>
 
-        <article>
-          
+        <article class="article">
+          <img class="article-img" src="images/code.png" />
+
+          <!-- HEADER -->
+            <h2 class="article-header">Fizz Buzz</h2>
+            <p class="article-date">July 8, 2019</p>
+
+          <!-- TEXT -->
+            <p class="article-text">
+              Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
+              Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
+              Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
+              Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
+              Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
+              Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
+              Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
+              Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
+            </p>
+            <button class="keep-reading-button2">KEEP READING</button>
         </article>
       </div>
     <!-- END CONTENT -->
 
     <!-- START FOOTER -->
       <div class="footer-container">
-
+        <h1 class="connected-text">Stay connected with me.</h1>
+        <div class="twitter-images">
+          <img class="twitter-icon" src="images/social-twitter-icon.png">
+          <img class="twitter-icon pad-left" src="images/social-twitter-icon.png">
+          <img class="twitter-icon pad-left" src="images/social-twitter-icon.png">
+          <img class="twitter-icon pad-left" src="images/social-twitter-icon.png">
+          <img class="twitter-icon pad-left" src="images/social-twitter-icon.png">
+        </div>   
+        <p class="footer-bottom-text">
+          Dummy text at the bottom just to fill in space.
+        </p>     
       </div>
     <!-- END FOOTER -->
   </body>
