--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
       
       <!-- TEXTBOX -->
         <blockquote class="textbox-container textbox-position">
-          <h1>
+          <h1 class="textbox-header-text">
             Hi, I'm Nicholas S Vilela!
           </h1>
-          <p>
-            This is just some dummy text to fill in space...
+          <p class="textbox-text">
+            This is just some dummy text to fill in space in the textbox.
           </p>
         </blockquote>
       </div>
