--- a/public/index.html
+++ b/public/index.html
@@ -8,43 +8,35 @@
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <!-- START HEADER -->
-    <div class="header-container">
-      <!-- PROFiLE -->
-        <img class="profile-img" src="images/moby300x300.png">
-      
-      <!-- TEXTBOX -->
-        <blockquote class="textbox-container textbox-position">
-          <h1 class="textbox-header-text">
-            Hi, I'm Nicholas S Vilela!
-          </h1>
-          <p class="textbox-text">
-            This is just some dummy text to fill in space in the textbox.
-          </p>
+    <!-- HEADER -->
+      <div>
+        <img class="profile-img" src="images/moby300x300.png"></img>
+
+        <blockquote class="textbox-container">
+          <h2 class="textbox-main-text textbox-padding">Hi, I'm Nicholas S Vilela!</h2>
+          <p class="textbox-p-text textbox-padding">This is just some dummy text to fill in this textbox.</p>
         </blockquote>
       </div>
     <!-- END HEADER -->
 
-    <!-- START CARDS -->
-      <div class="">
-        <ul class="no-bullets card-container black-bar">
-          <li>
-            <img class="cards" src="images/game-1@2x.png">
-          </li>
-          <li>
-            <img class="cards cards2" src="images/make-it-rain.png">
-          </li>
-          <li>
-            <img class="cards cards2" src="images/bomb-sniffer.png">
-          </li>
-          <li>
-            <img class="cards cards2" src="images/one-list.png">
-          </li>
-        </ul>
-      </div>
+    <!-- CARDS -->
+      <ul class="cards-container">
+        <li>
+          <img class="cards" src="images/game-1@2x.png" />
+        </li>
+        <li>
+          <img class="cards" src="images/make-it-rain.png" />
+        </li>
+        <li>
+          <img class="cards" src="images/bomb-sniffer.png" />
+        </li>
+        <li>
+          <img class="cards last-card" src="images/one-list.png" />
+        </li>
+      </ul>
     <!-- END CARDS -->
 
-    <!-- START CONTENT -->
+    <!-- CONTENT -->
       <div class="content-container">
         <article class="article">
           <img class="article-img" src="images/react.png" />
@@ -64,7 +56,6 @@
             </p>
             <button class="keep-reading-button">KEEP READING</button>   
         </article>
-
         <article class="article">
           <img class="article-img" src="images/code.png" />
 
@@ -83,22 +74,22 @@
               Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
               Veniam velit aliqua aliquip nostrud do velit officia ea occaecat.
             </p>
-            <button class="keep-reading-button2">KEEP READING</button>
+            <button class="keep-reading-button keep-reading2">KEEP READING</button>
         </article>
       </div>
     <!-- END CONTENT -->
 
-    <!-- START FOOTER -->
+    <!-- FOOTER -->
       <div class="footer-container">
         <h1 class="connected-text">Stay connected with me.</h1>
-        <div class="twitter-images">
+        <div class="twitter-image-container">
           <img class="twitter-icon" src="images/social-twitter-icon.png">
           <img class="twitter-icon pad-left" src="images/social-twitter-icon.png">
           <img class="twitter-icon pad-left" src="images/social-twitter-icon.png">
           <img class="twitter-icon pad-left" src="images/social-twitter-icon.png">
           <img class="twitter-icon pad-left" src="images/social-twitter-icon.png">
         </div>   
-        <p class="footer-bottom-text">
+        <p class="bottom-text">
           Dummy text at the bottom just to fill in space.
         </p>     
       </div>
